2.ReplicationControllers + ReplicaSets and Services + Ingress/exercises/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-node-port
spec:
  type: NodePort
  selector:
    app_1: nginx
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 80
      nodePort: 30007

---

apiVersion: v1
kind: Service
metadata:
  name: service-cluster-ip
spec:
  # type: ClusterIP
  selector:
    app_2: apache
  ports:
    - protocol: TCP
      port: 7777
      targetPort: 80
