2.ReplicationControllers + ReplicaSets and Services + Ingress/exercises/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.me
    http:
      paths:
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: service-node-port
      #       port:
      #         number: 9999
      - path: /hello-world
        pathType: Prefix
        backend:
          service:
            name: service-node-port
            port:
              number: 9999
  - host: apache2-webserver.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-cluster-ip
            port:
              number: 7777
      - path: /me
        pathType: Prefix
        backend:
          service:
            name: service-cluster-ip
            port:
              number: 7777
